fix: h2 floating out of bounds

--- a/src/styles.css
+++ b/src/styles.css
@@ -138,6 +138,11 @@ h1 {
   top: 0;
 }
 
+.best_title {
+  margin-block-start: 0;
+  margin-block-end: 0; 
+}
+
 .slider {
   display: flex;
   justify-content: space-between;
